2002-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (term_title): use ttyf instead of stderr

2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03137] Re: w3mman.1
	* XMakefile (MAN1): added
		    (MAN1_JA): added
		    (install-core): install man
		    (install-scripts): pass MAN_DIR
		    (uninstall): uninstall man, pass MAN_DIR to subdirs
	* config.h.dist (MAN_DIR): added
			(MAN1_DIR): added
			(MAN1_JA_DIR): added
	* configure: -mandir
		  (config.h): add MAN_DIR, MAN1_DIR, MAN1_JA_DIR
	* scripts/w3mman/Makefile (MAN1_DIR): added

2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03136] Add COMMAND to execute multiple commands
	* fm.h (CurrentMenuData): deleted
		(CurrentCmdData): added
	* func.c (getKey): check next char of ^
		(getWord): get word until ';'
		(getQWord): rewrite using Str
	* funcname.tab (COMMAND): added
	* main.c (MAIN): delete CurrentMenuData
			initialize CurrentCmdData
		(searchKeyData): use CurrentCmdData
		(execCmd): added
		(SigAlarm): delete CurrentMenuData, use CurrentCmdData
	* menu.c (action_menu): delete CurrentMenuData, use CurrentCmdData
	* proto.h (execCmd): added
	* doc/README.func (ALARM): capitalize
			(COMMAND): added
	* doc-jp/README.func (COMMAND): added

2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03135] commit of [w3m-dev 03006] is incomplete.
	* file.c (HTMLlineproc2body): check form_int fid attr
			update forms[]
			fix buf->formlist

2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* part of [w3m-dev-en 00713] contrib: unofficial "current page info" patch, updated for w3m-0.3
	  by Moritz Barsnick <barsnick@gmx.net>
	* map.c (page_info_panel): s/line/lines/
				s/byte/bytes/
				anchor for URL of current anchor

2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* -title support
	  modified [w3m-dev-en 00710] contrib: unofficial "xterm title" patch, updated for w3m-0.3
	  by Moritz Barsnick <barsnick@gmx.net>
	* NEWS: -title