@@ -1,3 +1,9 @@
+2002-03-23  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 03140] Forward: Bug#139305: 
+	   w3m: EXTERN_LINK does not work if href ends with ampersand
+	* main.c (invoke_browser): check bg by browser
+
 2002-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* terms.c (term_title): use ttyf instead of stderr
